feat: adopt Terminus health checks
